--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ pages:
     - node_modules/
 
   script:
-  - npm install
+  - npm install -g cnpm --registry=https://registry.npm.taobao.org
+  - cnpm install
   - npm run dist
   environment:
     name: cisen
