--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "compile": "antd-tools run compile",
     "tsc": "tsc",
     "start": "bisheng start -c ./site/bisheng.config.js --no-livereload",
-    "site": "bisheng build --ssr -c ./site/bisheng.config.js",
+    "site": "bisheng build -c ./site/bisheng.config.js",
     "site-start": "cross-env NODE_ENV=development node --max-old-space-size=8192 ./scripts/html-server.js",
     "deploy": "antd-tools run clean && npm run site && bisheng gh-pages --push-only",
     "pub": "antd-tools run pub",
